puzzles/kubes-stock-service/Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-stock-app
  labels:
    app: go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - name: go
        image: hpriest445/go-web-app:1.0
        ports:
        - containerPort: 8080
