puzzles/kubes-stock-service/Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: go
