puzzles/kubes-stock-service/Kubernetes/manifest.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: go-stock-app
  labels:
    app: go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - name: go
        image: hpriest445/go-web-app:1.0
        ports:
        - containerPort: 8080

kind: Service
metadata:
  name: go-service
spec:
  selector:
    app: go
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      
kind: Ingress
metadata:
  name: go-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: go-service
          servicePort: 8080
